tests/error/modifier_errors/pytket_w_measurement.err
Error: Unitary constraint violation (at $FILE:13:7)
   | 
11 | @guppy(unitary=True)
12 | def foo(q: qubit) -> bool:
13 |     b =guppy_circ(q)
   |        ^^^^^^^^^^^^^ This function cannot be called in a unitary context

Help: The function `guppy_circ` corresponds to a PyTKET circuit containing a
measurement or a reset operation, which is not allowed in a unitary context.

Guppy compilation failed due to 1 previous error
